k8s/ingress/patient/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: patient-api
  annotations:
    konghq.com/plugins: medikong-jwt,medikong-identity-headers,medikong-rate-limiting,medikong-correlation-id,medikong-prometheus
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /patients
            pathType: Prefix
            backend:
              service:
                name: patient-service
                port:
                  number: 8081
